# dj-bot

./: Cargo.toml  README.md  dj.service  install.sh  run.sh
src/: commands.rs  main.rs
